--- a/Homework 12/index.html
+++ b/Homework 12/index.html
@@ -29,8 +29,31 @@
     <div id="content">
       <div class="row">
         <div class="column one">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-          <p>Wuis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <a href="#">Excepteur</a> sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+          <div>
+              <p> <img src="eldo.png"  width="30" height="30"/> Iphone 14 in Eldorado : </p>
+
+              <span><h3>Temperature: {{result1[0]}}  °C</h3></span>
+                <span><h3>Wind speed: {{result1[1]}} м/с</h3></span>
+                <span><h3>Description: {{result1[2]}}</h3></span>
+</div>
+<br>
+
+<div>
+    <h2>Weather from website 2:</h2>
+    <span><h3>Temperature: {{result2[0]}}</h3></span>
+    <span><h3>Wind speed: {{result2[1]}}  м/с</h3></span>
+    <span><h3>Description: {{result2[2]}}</h3></span>
+</div>
+<br>
+
+<div>
+    <h2>Weather from website 3:</h2>
+    <span><h3>Temperature: {{result3[0]}} C</h3></span>
+    <span><h3>Wind speed: {{result3[1]}}  м/с</h3></span>
+    <span><h3>Description: {{result3[2]}}</h3></span>
+</div>
+
         </div>
       </div>
 
